# coral-cli

./: .gitignore  README.md  main.py  pyproject.toml
coral_cli/: cli.py
coral_cli/app/commands/create/application/: project_builder.py  project_creator.py
coral_cli/app/commands/create/domain/: create_repository.py  project.py
coral_cli/app/commands/create/infrastructure/: create_controller.py  os_project_create_repository.py
coral_cli/app/commands/init/application/: structure_builder.py  structure_creator.py
coral_cli/app/commands/init/domain/: interfaces.py  vo.py
coral_cli/app/commands/init/infrastructure/: init_controller.py  os_project_init_repository.py
coral_cli/commands/: cli_add.py  cli_create.py  cli_init.py
tests/commands/: create.py
