[tool.poetry]
name = "coral-cli"
version = "0.1.0"
description = ""
authors = ["jvngarcia <angelgarciaweb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.scripts]
coral = "coral_cli.cli:init"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
